# TP-Reconstruction-3D

./: .gitignore  CMakeLists.txt  README.md
data/: calib1.xml  calib1param.xml  calib2.xml  calib2param.xml  cloud.txt
include/: cameraCalibration.hpp  dataStruct.hpp  epipolarGeom.hpp  imageUndistortion.hpp  poseEstimation.hpp  types.hpp  utils.hpp
src/: main.cpp  nocalib.cpp
